A little more progress. Definitely working now, though it appears paper servers need to be mounted and then restarted at least once for OP setting to apply

--- a/templates/waterfall-config.yml.j2
+++ b/templates/waterfall-config.yml.j2
@@ -7,7 +7,7 @@ forge_support: false
 groups:
   {{ mc_ops }}:
   - admin
-ip_forward: true
+ip_forward: false
 listeners:
 - bind_local_address: true
   force_default_server: false
