--- a/templates/waterfall-config.yml.j2
+++ b/templates/waterfall-config.yml.j2
@@ -7,7 +7,7 @@ forge_support: false
 groups:
   {{ mc_ops }}:
   - admin
-ip_forward: false
+ip_forward: true
 listeners:
 - bind_local_address: true
   force_default_server: false
