Added a restricted variable for waterfall config, commented out docker-compose up portion of playbook to ease testing

--- a/templates/waterfall-config.yml.j2
+++ b/templates/waterfall-config.yml.j2
@@ -47,6 +47,9 @@ servers:
 {% if container.active %}
   {{ container.service_name }}:
     address: {{ container.service_name }}:25565
+{% if container.restricted %}
+    restricted: true
+{% endif %}
 {% endif %}
 {% endif %}
 {% endfor %}
